tools: use nio path instead of file, faster documents directory path, use prefix for increment because it is universally the better style (java does not care, but in general programming it should be the default), dependency update, use path.of() directly instead of calling paths.get()